# wiggle-immich

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml
docker/: .env.example  .gitignore  Dockerfile  Dockerfile.webhook  compose.test.yml  compose.yml  immich.env
image_helper/: __init__.py  asset_metadata.py  byte_cache.py  cli.py  config.py  detector.py  doctor.py  exporter.py  frames.py  group_validation.py  hashstore.py  immich.py  immich_workflows.py  models.py  service.py  stabilize.py  webhook.py  workflow_payload.py
scripts/: e2e_album.py  e2e_bootstrap.py  e2e_verify.py  e2e_workflow_bootstrap.py  generate_fixtures.py  run-e2e-workflow.sh  run-e2e.sh  setup.sh  test.sh
testdata/workflows/: wigglegram-webhook.json
tests/: test_asset_metadata.py  test_byte_cache.py  test_config.py  test_detector.py  test_exporter_formats.py  test_frames.py  test_group_validation.py  test_immich_workflows.py  test_service_detection.py  test_service_enhancements.py  test_stabilize.py  test_webhook_service.py  test_workflow_payload.py
