[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "image-helper"
version = "0.1.0"
description = "Immich wigglegram detection and GIF export helper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "Pillow>=10.0.0",
    "pillow-heif>=0.16.0",
    "imagehash>=4.3.1",
    "typer>=0.12.0",
    "pydantic-settings>=2.2.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
webhook = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
image-helper = "image_helper.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["image_helper"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    ".git",
    ".venv",
    "docker",
    "testdata",
    "test-data",
    "build",
    "dist",
    "*.egg",
]
addopts = [
    "--import-mode=importlib",
    "--ignore=docker/test-data",
]
